--- a/learner1.html
+++ b/learner1.html
@@ -30,16 +30,14 @@
             <a class="btn-continue" data-next="#scene-title-pasta"><i class="far fa-play-circle"></i>Start</a>
           </div>
 
-          <div id="scene-end" class="scene">
+          <div id="scene-share" class="scene">
             <div class="icon">
               <i class="fas fa-glass-cheers"></i>
             </div>
             <h2>Congratulation!!!</h2>
-<!--             <p>You have completed the course. Now you can show off to your friends how a microwave oven works!</p> -->
-            <p >You got <span id="final-score">76 </span> points in total</p>
-            <a class="btn-continue" data-next="#scene-feedback"><i class="fas fa-arrow-circle-right"></i>Feedback</a>
-<!--             <a class="btn-share"><i class="fab fa-twitter"></i>Share</a>
- -->          </div>
+            <p>You have completed the course. Now you can show off to your friends how a microwave oven works!</p>
+            <a class="btn-share"><i class="fab fa-twitter"></i>Share</a>
+          </div> 
 
           <div id = "scene-feedback" class="scene">
             <p id = "feedback-text">feedbacktext</p> 
@@ -124,7 +122,7 @@
             </div>
 
             <h2>Correct!</h2>
-            <p>YYou chose the correct answer. Microwaves can be absorbed by ceramics whereas will be reflected by metals. That’s why the pasta in the ceramic container is hotter.
+            <p>You chose the correct answer. Microwaves can be absorbed by ceramics whereas will be reflected by metals. That’s why the pasta in the ceramic container is hotter.
 Now explain what you just learned to your partner.
 </p>
             <a class="btn-continue" data-next="#scene-explain"><i class="fas fa-magic"></i>Continue</a>
