--- a/learner1.html
+++ b/learner1.html
@@ -37,7 +37,16 @@
             <h2>Congratulation!!!</h2>
             <p>You have completed the course. Now you can show off to your friends how a microwave oven works!</p>
             <a class="btn-share"><i class="fab fa-twitter"></i>Share</a>
-          </div> 
+          </div>
+
+          <div id="scene-end" class="scene">
+            <div class="icon">
+              <i class="fas fa-glass-cheers"></i>
+            </div>
+            <h2>Congratulation!!!</h2>
+            <p >You got <span id="final-score">76 </span> points in total</p>
+            <a class="btn-continue" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Feedback</a>
+          </div>
 
           <div id = "scene-feedback" class="scene">
             <p id = "feedback-text">feedbacktext</p> 
