--- a/learner1.html
+++ b/learner1.html
@@ -48,12 +48,7 @@
             <a class="btn-continue" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Feedback</a>
           </div>
 
-          <div id = "scene-feedback" class="scene">
-            <p id = "feedback-text">feedbacktext</p> 
-            <a id ="btn-continue-feedback" data-next="#scene-feedback"><i class="fas fa-arrow-circle-right"></i>next</a>
-          </div>
-
-<!-- Experiment 1 -->
+    <!-- Experiment 1 -->
           <div id="scene-title-pasta" class="scene scene-title">
             <div class="icon">
               <i class="far fa-grin"></i>
@@ -104,8 +99,7 @@
             <div class="gallery select" data-target="#scene-answer-pasta">
               <!-- answer pasta是self-explanation的界面 -->
               <div class="frame option" data-next="#scene-wrong-pasta">
-                <!-- 这里会记住是right还是wrong的答案
-                灿海说我们可以存在localStorage上 -->
+                <!-- 这里会记住是right还是wrong的答案-->
                 <!-- 选择题点了选项之后的目标 -->
                 <p>The pasta in the <span>metal container</span> is hotter.</p>
               </div>
@@ -132,8 +126,8 @@
 
             <h2>Correct!</h2>
             <p>You chose the correct answer. Microwaves can be absorbed by ceramics whereas will be reflected by metals. That’s why the pasta in the ceramic container is hotter.
-Now explain what you just learned to your partner.
-</p>
+            Now explain what you just learned to your partner.
+            </p>
             <a class="btn-continue" data-next="#scene-explain"><i class="fas fa-magic"></i>Continue</a>
           </div>
           <div id="scene-wrong-pasta" class="scene scene-feedback">
@@ -142,13 +136,13 @@ Now explain what you just learned to your partner.
             </div>
             <h2>Incorrect</h2>
             <p>You chose the wrong answer. Microwaves can be absorbed by ceramics whereas will be reflected by metals. That’s why the pasta in the ceramic container is hotter.
-You may need to review your notes or the video before explaining to your partner.
-</p>
+            You may need to review your notes or the video before explaining to your partner.
+            </p>
             <a class="btn-continue" data-next="#scene-explain"><i class="fas fa-magic"></i>Continue</a>
           </div>
           <!-- btn-end就是之后没有continue了，最后一个页面 -->
           <!-- pasta在这里结束，pizza在这里开始 -->
-<!-- Experiment 2 -->
+    <!-- Experiment 2 -->
           <div id="scene-title-pizza" class="scene scene-title">
             <div class="icon">
               <i class="far fa-grin"></i>
