--- a/learner2.html
+++ b/learner2.html
@@ -153,7 +153,7 @@ You may need to review your notes or the video before explaining to your partner
             <div class="icon">
               <i class="far fa-grin"></i>
             </div>
-            <h2>Experiment Time!!!</h2>
+            <h2>Practice Time!!!</h2>
             <p>Following we will do an experiment on heating pizza to see what are the differences between traditional ovens and microwave ovens and verify the answer in the following video.</p>
             <a class="btn-continue" data-next="#scene-desc-pizza"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
@@ -402,19 +402,19 @@ You may need to review your notes or the video before explaining to your partner
             <h3>Now listen to your partner's explanation</h3>
             <p2>Pay attention to whether he/she has covered all the knowlege components below.</p2>
               <div class="kc">
-               <p3>How do microwaves affect water molecules?</p3>
+               <p3>What is microwave?</p3>
               </div>
               <div class="kc">
-               <p3>Why are water molecules being twisted? How does that produce heat?</p3>
+               <p3>Why microwave oven essentially only heats the food?</p3>
               </div>
               <div class="kc">
-               <p3>How does a conventional oven work?</p3>
+               <p3>Microwave ovens deliver cooking power primarily to what material in the food?</p3>
               </div>
               <div class="kc">
-               <p3>Why does a microwave cook food faster?</p3>
+               <p3>Why do containers not get as hot as food inside them?</p3>
               </div>
               <div class="kc">
-               <p3>Cooked in microwave oven, would food get brown or crispy? Why?</p3>
+               <p3>Why you shouldn't use metal plates or foils in microwave ovens?</p3>
               </div>
             <a class="btn-continue" data-next="#scene-title-practice"><i class="far fa-play-circle"></i>Got Them</a>
           </div>
@@ -425,7 +425,7 @@ You may need to review your notes or the video before explaining to your partner
               <i class="fas fa-times-circle"></i>
             </a>
             <h4>Part1</h4>
-            <iframe class="videopiece" src="https://youtube.com/embed/zt-CLmZhLiA"></iframe>
+            <iframe class="videopiece" src="https://youtube.com/embed/M0SUqGU8Ixk"></iframe>
               <div class="kcexplain">
                <p3 id="video-kc1">self explanation1</p3>
               </div>
@@ -437,7 +437,7 @@ You may need to review your notes or the video before explaining to your partner
               <i class="fas fa-times-circle"></i>
             </a>
             <h4>Part2</h4>
-            <iframe class="videopiece" src="https://youtube.com/embed/v--baKovZ7M"></iframe>
+            <iframe class="videopiece" src="https://youtube.com/embed/hNQ-mv7Sy8U"></iframe>
               <div class="kcexplain">
                <p3 id="video-kc2">self explanation2</p3>
               </div>
@@ -449,7 +449,7 @@ You may need to review your notes or the video before explaining to your partner
               <i class="fas fa-times-circle"></i>
             </a>
             <h4>Part3</h4>
-            <iframe class="videopiece" src="https://youtube.com/embed/H1-IOeu6j94"></iframe>
+            <iframe class="videopiece" src="https://youtube.com/embed/friVqnneFu8"></iframe>
               <div class="kcexplain">
                <p3 id="video-kc3">self explanation3</p3>
               </div>
@@ -461,7 +461,7 @@ You may need to review your notes or the video before explaining to your partner
               <i class="fas fa-times-circle"></i>
             </a>
             <h4>Part4</h4>
-            <iframe class="videopiece" src="https://youtube.com/embed/E9vG4JwjKWQ"></iframe>
+            <iframe class="videopiece" src="https://youtube.com/embed/SW_ZkoRedFs"></iframe>
               <div class="kcexplain">
                <p3 id="video-kc4">self explanation4</p3>
               </div>
@@ -473,7 +473,7 @@ You may need to review your notes or the video before explaining to your partner
               <i class="fas fa-times-circle"></i>
             </a>
             <h4>Part5</h4>
-            <iframe class="videopiece" src="https://youtube.com/embed/dKdjVH13Xsk"></iframe>
+            <iframe class="videopiece" src="https://youtube.com/embed/bppQuOyHnyw"></iframe>
               <div class="kcexplain">
                <p3 id="video-kc5">self explanation5</p3>
               </div>
@@ -482,35 +482,35 @@ You may need to review your notes or the video before explaining to your partner
           <!-- 这里开始是前面每一kc的self-explanation -->
           <div id="scene-kc1" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>What is microwave?</p>
+            <p>How do microwaves affect water molecules?</p>
             <textarea id="input-answer-kc1" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
             <a id = "btn-continue-kc1" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>What absorbs microwave and what does not? So microwave oven will heat what but will not heat what?</p>
+            <p>Why are water molecules being twisted? How does that produce heat?</p>
             <textarea id="input-answer-kc2" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
             <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Microwave ovens deliver cooking power primarily to what content in the food?</p>
+            <p>How does a conventional oven work?</p>
             <textarea id="input-answer-kc3" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
             <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why do containers not get as hot as food inside them?</p>
+            <p>Why does a microwave cook food faster?</p>
             <textarea id="input-answer-kc4" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
             <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why you shouldn't use metal plates or foils in microwave ovens?</p>
+            <p>Cooked in microwave oven, would food get brown or crispy? Why?</p>
             <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
             <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
@@ -529,6 +529,6 @@ You may need to review your notes or the video before explaining to your partner
     </div>
 
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/main2.js"></script>
   </body>
 </html>
