--- a/learner1.html
+++ b/learner1.html
@@ -357,40 +357,32 @@
               <div class="self-explanation">
                <p3 id="self-explanation-kc1"></p3>
               </div>
-              <a id = "btn-hint2" data-next="#scene-video1" >Hint</a>
+              <a  class="btn-hintvideo" data-next="#scene-video1" >Hint</a>
 
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 id="self-explanation-kc2"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video2">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video2">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 id="self-explanation-kc3"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video3">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video3">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 id="self-explanation-kc4"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video4">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video4">Hint</a>
             </div>
             <div class="explanationline">
               <div class="self-explanation">
                <p3 id="self-explanation-kc5"></p3>
               </div>
-              <a class="icon-play" data-next="#scene-video5">
-                Hint
-              </a>
+              <a class="btn-hintvideo" data-next="#scene-video5">Hint</a>
             </div>
 
             <a class="btn-continue" data-next="#scene-listen">
@@ -494,7 +486,7 @@
             <p>You will explain to you partner two questions: 1. What absorbs microwave and what does not? 2. Microwave oven will heat what but will not heat what?</p>
             <p>Take notes here on how you will explain. You can click hint if you don't remember clearly.</p>
             <textarea id="input-answer-kc2" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-hint2" >Hint</a>
+            <a id = "btn-hint2" class="btn-hint" >Hint</a>
             <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
