--- a/learner1.html
+++ b/learner1.html
@@ -59,7 +59,7 @@
               <i class="far fa-grin"></i>
             </div>
             <h2>Practice Time!!!</h2>
-            <p>Following we will do an experiment on heating pasta to see how the material of conatiners would affect microwave oven heating and find the answer in the following video.</p>
+            <p>Following we will do an experiment on heating pasta to see how the material of conatiners would affect microwave oven heating.</p>
             <a class="btn-continue" data-next="#scene-desc-pasta"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
 
@@ -474,7 +474,7 @@
             <h2>What did you learn?</h2>
             <p>You will explain to your partner: <span class = "green">What is microwave?</span></p>
             <p>Take notes here to help prepare for your teaching.</p>
-            <div id="textbox-and-hint-1" class="textbox-and-hint">
+            <div class="textbox-and-hint">
               <textarea id="input-answer-kc1" class="input-answer narrower-inputbox" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
               <a id = "btn-hint1" class="btn-hint">Hint</a>
             </div>
@@ -483,31 +483,45 @@
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>You will explain to you partner two questions: 1. What absorbs microwave and what does not? 2. Microwave oven will heat what but will not heat what?</p>
-            <p>Take notes here on how you will explain. You can click hint if you don't remember clearly.</p>
-            <textarea id="input-answer-kc2" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-hint2" class="btn-hint" >Hint</a>
-            <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to you partner two questions: <span class="green">1. What absorbs microwave and what does not? 2. Microwave oven will heat what but will not heat what?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc2" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id = "btn-hint2" class="btn-hint" >Hint</a>
+            </div>
+            <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Microwave ovens deliver cooking power primarily to what content in the food?</p>
-            <textarea id="input-answer-kc3" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">To what content in the food does a microwave oven deliver cooking power primarily?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc3" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id = "btn-hint3" class="btn-hint">Hint</a>
+            </div>
+            <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why do containers not get as hot as food inside them?</p>
-            <textarea id="input-answer-kc4" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">Why do containers not get as hot as food inside them?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc4" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id = "btn-hint4" class="btn-hint">Hint</a>
+            </div>
+              <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why you shouldn't use metal plates or foils in microwave ovens?</p>
-            <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+            <p>You will explain to your partner: <span class="green">Why you shouldn't use metal plates or foils in microwave ovens?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc5" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id="btn-hint5" class="btn-hint">Hint</a>
+            </div>
             <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
