--- a/learner2.html
+++ b/learner2.html
@@ -482,37 +482,54 @@ You may need to review your notes or the video before explaining to your partner
           <!-- 这里开始是前面每一kc的self-explanation -->
           <div id="scene-kc1" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>How do microwaves affect water molecules?</p>
-            <textarea id="input-answer-kc1" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc1" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class = "green">How do microwaves affect water molecules?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc1" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id = "btn-hint1" class="btn-hint">Hint</a>
+            </div>
+            <a id = "btn-continue-kc1" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc2" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why are water molecules being twisted? How does that produce heat?</p>
-            <textarea id="input-answer-kc2" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">1. Why are water molecules being twisted? 2. How does that produce heat?</span></p>
+            <p>Take notes here to help prepare for your teaching.</p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc2" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id="btn-hint2" class="btn-hint">Hint</a>
+            </div>
+              <a id = "btn-continue-kc2" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc3" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>How does a conventional oven work?</p>
-            <textarea id="input-answer-kc3" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">How does a conventional oven work?</span></p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc3" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id="btn-hint3" class="btn-hint">Hint</a>
+            </div>
+              <a id = "btn-continue-kc3" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc4" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Why does a microwave cook food faster?</p>
-            <textarea id="input-answer-kc4" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">Why does a microwave cook food faster?</span></p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc4" class="input-answer" rows="2" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id="btn-hint4" class="btn-hint">Hint</a>
+            </div>
+            <a id = "btn-continue-kc4" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
           <div id="scene-kc5" class="scene scene-answer">
             <h2>What did you learn?</h2>
-            <p>Cooked in microwave oven, would food get brown or crispy? Why?</p>
-            <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
-            <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled"><i class="fas fa-magic"></i>Continue</a>
+            <p>You will explain to your partner: <span class="green">Cooked in microwave oven, would food get brown or crispy? Why?</span></p>
+            <div class="textbox-and-hint">
+              <textarea id="input-answer-kc5" class="input-answer" rows="4" placeholder="Explain in a way that you would explain it to your partner."></textarea>
+              <a id="btn-hint5" class="btn-hint">Hint</a>
+            </div>
+            <a id = "btn-continue-kc5" class="btn-end btn-continue btn-disabled margin-top"><i class="fas fa-magic"></i>Continue</a>
           </div>
 
 
