--- a/learner1.html
+++ b/learner1.html
@@ -65,7 +65,7 @@
 
           <div id="scene-desc-pasta" class="scene scene-desc">
             <h2>Heating Pasta</h2>
-            <p>Your want to heat your pasta using the microwave oven. There are 2 containers of different material. One is a metal container, another is a ceramic container. Both of them contain your pasta. Let's put them in two microwave ovens and heat with the same amout of time and see what will happen.</p>
+            <p>Your want to heat your pasta using the microwave oven. There are 2 containers of different material. One is a metal container, another is a ceramic container. Both of them contain your pasta. Let's put them in two microwave ovens and heat with the same amount of time and see what will happen.</p>
             <div class="gallery">
               <div class="frame">
                 <img src="images/pasta-metal.png" alt="">
@@ -158,7 +158,7 @@
           </div>
           <div id="scene-desc-pizza" class="scene scene-desc">
             <h2>Heating Pizza</h2>
-            <p>Your want to heat your pizza using a traditional oven and a microwave oven. There are 2 pieces of pizza. You put one in the traditional oven and another in the microwave oven. Let's heat them with the same amout of time and see what will happen.</p>
+            <p>Your want to heat your pizza using a traditional oven and a microwave oven. There are 2 pieces of pizza. You put one in the traditional oven and another in the microwave oven. Let's heat them with the same amount of time and see what will happen.</p>
             <div class="gallery">
               <div class="frame">
                 <img src="images/pizza-microwave.png" alt="">
