Check and times icon in feedbacks

--- a/learner1.html
+++ b/learner1.html
@@ -239,7 +239,13 @@
 
           <!-- 一个题目页面 -->
           <div id="scene-question-1" class="scene scene-question">
-            <h2 id="exam-question">Question 1</h2>
+
+            <!-- <div class="inline"> -->
+              <div class="icon feedback-icon hidden-icon">
+                <i class="far fa-check-circle"></i>
+              </div>
+              <h2 id="exam-question">Question 1</h2>
+            <!-- </div> -->
             <p id="problem-statement">Microwaves are electric waves that could NOT penetrate?</p>
             <div class="gallery gallery-v select" data-target="#scene-question-1">
               <button id ="optionA" class="frame option option-q" data-next="#scene-question-1">
