--- a/learner2.html
+++ b/learner2.html
@@ -240,6 +240,11 @@ You may need to review your notes or the video before explaining to your partner
 
           <!-- 一个题目页面 -->
           <div id="scene-question-1" class="scene scene-question">
+
+            <div class="icon feedback-icon hidden-icon">
+              <i class="far fa-check-circle"></i>
+            </div>
+
             <h2 id="exam-question">Question 1</h2>
             <p id="problem-statement">Microwaves are electric waves that could NOT penetrate?</p>
             <div class="gallery gallery-v select" data-target="#scene-question-1">
@@ -256,6 +261,7 @@ You may need to review your notes or the video before explaining to your partner
                 <p>D. Metal</p>
               </button>
             </div>
+
             <a id="btn-continue-exam" class="btn-continue-q btn-disabled" data-next="#scene-question-1"><i class="fas fa-arrow-circle-right"></i>Continue</a>
           </div>
           <!-- 到这里 -->
